# effective-claude-code-usage

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  index.qmd  justfile  llms-full.txt  llms.txt  meta-tags.html  pyproject.toml  robots.txt  sitemap.xml  style.css
.github/workflows/: build-presentation.yaml
.well-known/: llms-full.txt  llms.txt
media/: generate_diagrams.py  social-card-source.html
