[project]
name = "effective-claude-code-usage"
version = "1.0.0"
description = "A comprehensive guide to using Claude Code effectively as a CLI agent"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "CC0 1.0 Universal" }
authors = [
    { name = "Indrajeet Patil", email = "patilindrajeet.science@gmail.com" }
]
keywords = [
    "claude-code",
    "ai-agents",
    "cli",
    "anthropic",
    "software-engineering"
]
dependencies = ["jupyter>=1.1.1", "ipykernel>=7.2.0", "matplotlib>=3.10.8"]

[tool.uv]
required-version = ">=0.11.7"

[dependency-groups]
dev = []
